--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <title>CORONA INFORMATION</title>
 <link rel="stylesheet" href="style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
-<script src="./corona/WebContent/myscript.js"></script>
+<script src="myscript.js"></script>
 </head>
 <body ng-app="MyApp" ng-controller="MyCtrl">
 <div class="container">
