--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 
 
-<input type="text" class="form-control mt-4 mb-4" placeholder="ENTER THE NAME OF THE COUNTRY eg:India" ng-model="c" ng-change="get_c()">
+<input type="text" class="form-control mt-4 mb-4" placeholder="ENTER COUNTRY NAME eg:India" ng-model="c" ng-change="get_c()">
 <div class="container-fluid" ng-if="c_data">
 <center><h3>{{c}} CASES</h3></center>
 <div class="row text-center" ng-if="c_data">
@@ -99,7 +99,7 @@
 </div>
 </div>
 
-<input type="text" class="form-control mt-4 mb-4" placeholder="ENTER THE NAME OF THE STATE IN INDIA eg:Jharkhand" ng-model="st" ng-change="get_state()">
+<input type="text" class="form-control mt-4 mb-4" placeholder="ENTER STATE NAME eg:Jharkhand" ng-model="st" ng-change="get_state()">
 
 <div class="container-fluid" ng-if="st">
 <center><h3>{{st}} CASES</h3></center>
