--- a/index.html
+++ b/index.html
@@ -142,7 +142,31 @@
 
 
 </div>
+<h1><b>Fineprint of lockdown 4.0 order:</b></h1><br>
 
+<h3><b>Activities prohibited throughout the country</b></h3><br>
+<h5><ul>
+<li>All domestic and international air travel of passengers, except for domestic medical services, domestic air ambulance and for security purposes or purposes as permitted by MHA.</li>
+
+<li>Metro rail services.</li>
+
+<li>Running of schools, colleges, educational and training/coaching institutions</li>
+
+<li>Hotels, restaurants and other hospitality services, except for the running of canteens in bus depots, railway stations and airports; places of large public gatherings such as cinemas, shopping malls, gymnasiums entertainment parks, etc.; social, political, cultural and similar gatherings and other large congregations; and, access to religious places/places of worship for public</li></ul>
+<h3><b>Activities permitted with restrictions</b></h3><br>
+<ul>
+<h5><li>Evacuation of foreign nationals from India, return of stranded Indian nationals from abroad, sign-on and sign-off of Indian seafarers, and intra-State and inter-State movement of stranded persons by bus and train, will continue to be allowed.</li>
+<li>Inter-State movement of vehicles and buses has also been allowed with mutual consent of the concerned States/ UTs. Intra-State movement of vehicles and buses can be decided by State.</li>
+</h5></ul>
+
+<h3><b>Night curfew</b></h3><br>
+<h5><ul><li>Night Curfew shall continue to remain in force on the movement of individuals, for all non-essential activities, between 7 pm and 7 am</li></ul></h5>
+
+
+
+
+</h5>
+</ul>
 </div>
 <!-- Footer -->
 <footer class="page-footer font-small teal pt-4">
