--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </div>
 
 <div class="col-md-3 ">
-<div class="card bg-danger text-white" >
+<div class="card bg-primary text-white" >
 <div class="card-body">
 <h3>Total Cases</h3>
 <h3>{{s_data.data[0].total}}</h3></div>
