--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link href="css/mystyle.css" rel="stylesheet" type="text/css"/>
+ <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Oswald';font-size: 22px;
+}
+</style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- css -->
@@ -38,7 +44,7 @@
 <li>Follow the directions of your local health authority</li></h5>
 </ul>
 <!--all data-->
-<center><h2>WORLDWIDE CASES</h2></center>
+<center><h2>Worldwide Cases</h2></center>
 <div class="row text-center">
 
 <div class="col-md-4">
@@ -70,7 +76,7 @@
 
 <input type="text" class="form-control mt-4 mb-4" placeholder="ENTER COUNTRY NAME eg:India" ng-model="c" ng-change="get_c()">
 <div class="container-fluid" ng-if="c_data">
-<center><h3>{{c}} CASES</h3></center>
+<center><h3>{{c}} Cases</h3></center>
 <div class="row text-center" ng-if="c_data">
 <div class="col-md-4">
 <div class="card bg-warning text-white">
@@ -102,7 +108,7 @@
 <input type="text" class="form-control mt-4 mb-4" placeholder="ENTER STATE NAME eg:Jharkhand" ng-model="st" ng-change="get_state()">
 
 <div class="container-fluid" ng-if="st">
-<center><h3>{{st}} CASES</h3></center>
+<center><h3>{{st}} Cases</h3></center>
 <div class="row text-center" ng-if="st">
 <div class="col-md-3">
 <div class="card bg-warning text-white">
