--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link href="css/mystyle.css" rel="stylesheet" type="text/css"/>
-<link href='https://fonts.googleapis.com/css?family=Bree Serif' rel='stylesheet'>
+	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
 <style>
 body {
-    font-family: 'Bree Serif';font-size: 22px;
+    font-family: 'Oswald';font-size: 22px;
 }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -184,7 +184,8 @@ body {
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">@ 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> AbhishekPandey(Java Developer)</a>
+    <a> AbhishekPandey(Java Developer)</a><br>
+   <center><a href="https://akp-pandey.github.io/info/">Portfolio</a></center>
   </div>
   <!-- Copyright -->
 
