--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link href="css/mystyle.css" rel="stylesheet" type="text/css"/>
-	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
-<style>
-body {
-    font-family: 'Oswald';font-size: 22px;
-}
-</style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- css -->
@@ -25,7 +19,12 @@ body {
 <!-- js end -->
 <meta charset="ISO-8859-1">
 <title>CORONA INFORMATION</title>
-<link rel="stylesheet" href="style.css">
+<link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Sofia';font-size: 22px;
+}
+</style>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
 <script src="myscript.js"></script>
 </head>
